// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toggle should have a toggle button 1`] = `
<div>
  <div>
    <button
      class="button"
      data-testid="show-filters"
    >
      Show Filter
    </button>
  </div>
</div>
`;

exports[`toggle should toggle text on button click 1`] = `
<div>
  <div>
    <button
      class="button"
      data-testid="show-filters"
    >
      Hide Filter
    </button>
    Hello
  </div>
</div>
`;
